# bike_predict_python

./: .gitignore  README.md  bikemodel.py  data.ipynb  model.ipynb  model.py  read_raw_data.ipynb  requirements.txt
app/: app.py  justfile  requirements.txt
app-dev/: justfile
app-dev/app/: app.py  manifest.json
app/app/: app.py  manifest.json  requirements.txt
landing-page/: overview.html  overview.qmd
model/01-train-and-deploy-model/: app.py  justfile  manifest.json  model_new.py  model_training_deployment.ipynb  requirements.txt  test.md  utils.py  vetiver_deployment.ipynb
model/02-monitor-model/: model_monitor.ipynb
notebooks/: data.ipynb  deploy.ipynb  model.ipynb
package/: README.md  pyproject.toml
package/bikeshare/: README.md  data.py  model.py
py-shiny-app/: app.py  bike_shiny.ipynb  bike_shiny.py  requirements.txt
py-shiny-app/rsconnect-python/: py-shiny-app.json
rsconnect-python/: bike_predict_python.json
